complain if invalid parameters are given to fsync command

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • GregsList - 2024-09-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      {fsync: 1, unlock: true }
      

      Will not result in an error even though "unlock" is not a valid parameter for the command. Invalid invocations of this command should result in an error.

            Assignee:
            Nic Hollingum
            Reporter:
            Lamont Nelson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: