SERVER-89639 make fsync command stricter (and use IDL) (#26003)

GitOrigin-RevId: 36812bc6181bc723eafb48a5dda4ea1841954cbc